--- a/js-hw-10/webpack/src/templates/menu.hbs
+++ b/js-hw-10/webpack/src/templates/menu.hbs
@@ -17,7 +17,7 @@
         </p>
         <ul class="tag-list">
           {{#each this.ingredients}}
-            <li class="tag-list__item"></li>
+            <li class="tag-list__item">{{this}}</li>
           {{/each}}
         </ul>
       </div>
